@@ -1,8 +1,12 @@
 package agent;
 
+import java.lang.management.ManagementFactory;
+import java.lang.management.ThreadMXBean;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.Timer;
@@ -11,31 +15,39 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.ThreadPoolExecutor;
+import java.util.concurrent.atomic.AtomicInteger;
 
 /**
  * Core agent for ClosureJVM - a persistent execution harness for JVM web applications
  * that uses coverage-guided exploration to discover availability, performance, and
  * correctness failures.
+ *
+ * Per-iteration state lives on an {@link IterationContext} (v0.6): {@link #begin()} returns
+ * one and {@link #end(IterationContext)} consumes it. The legacy {@link #beginIteration()} /
+ * {@link #endIteration()} pair is retained as thread-local-backed wrappers so existing
+ * callers are unchanged; because the context is per-thread, concurrent begin/end pairs no
+ * longer stomp each other's latency baseline or leak set. See docs/DESIGN-DECISIONS.md
+ * DD-005 / DD-010.
  */
 public class Agent {
 
-    private static volatile Set<Long> baselineNonDaemonThreadIds = Collections.emptySet();
-    private static volatile int iteration = 0;
-    // Keep weak references so tracking doesn't retain executors/timers long-term
+    private static final AtomicInteger ITERATION = new AtomicInteger(0);
+
+    // Global registries and infrastructure (not per-iteration).
+    // Keep weak references so tracking doesn't retain executors/timers long-term.
     private static final Set<java.lang.ref.WeakReference<ExecutorService>> trackedExecutorRefs = Collections.newSetFromMap(new ConcurrentHashMap<>());
     private static final Set<java.lang.ref.WeakReference<Timer>> trackedTimerRefs = Collections.newSetFromMap(new ConcurrentHashMap<>());
-    private static volatile Set<Integer> baselineActiveExecutorIdentities = Collections.emptySet();
-    private static volatile Set<Integer> baselineActiveTimerIdentities = Collections.emptySet();
-    // Simple metrics baselines captured at iteration start
-    private static volatile long iterationStartNanos = 0L;
-    private static volatile long baselineHeapUsedBytes = 0L;
-    private static volatile int baselineThreadCount = 0;
-    private static volatile java.util.List<String> lastInvariantViolations = java.util.Collections.emptyList();
-    private static volatile String lastInvariantStack = "";
     private static final Timer invariantSampler = new Timer("ClosureJVM-InvariantSampler", true);
-    private static volatile TimerTask samplingTask = null;
-    private static volatile Thread monitoredThread = null;
-    private static volatile String sampledExecStack = "";
+    private static final ThreadMXBean THREAD_MX = ManagementFactory.getThreadMXBean();
+
+    // "Last completed iteration" evidence, exposed to servlet integrations (filter/valve,
+    // status servlet). Under serialized execution this reflects the just-finished iteration.
+    private static volatile List<String> lastInvariantViolations = Collections.emptyList();
+    private static volatile String lastInvariantStack = "";
+
+    // Backs the legacy beginIteration()/endIteration() wrappers: the context for the
+    // iteration in progress on this thread.
+    private static final ThreadLocal<IterationContext> CURRENT = new ThreadLocal<>();
 
     /**
      * Entry point for the JVM agent
@@ -47,33 +59,37 @@ public class Agent {
         // Agent initialization logic would go here
     }
 
-    /**
-     * Begin a new iteration boundary
-     * This method should be called at the start of each iteration
-     */
-    public static void beginIteration() {
-        iteration++;
-        System.out.println("Beginning iteration");
-        // Metrics baseline
-        iterationStartNanos = System.nanoTime();
-        baselineHeapUsedBytes = usedHeapBytes();
-        baselineThreadCount = snapshotTotalThreadCount();
-        lastInvariantViolations = java.util.Collections.emptyList();
-        lastInvariantStack = "";
-        sampledExecStack = "";
-        monitoredThread = Thread.currentThread();
-        scheduleLatencySampleIfConfigured();
-        baselineNonDaemonThreadIds = snapshotNonDaemonThreadIds();
-        baselineActiveExecutorIdentities = snapshotActiveExecutorIdentities();
-        baselineActiveTimerIdentities = snapshotActiveTimerIdentities();
+    // --- Explicit context API (preferred) ---
+
+    /** Begin an iteration, returning its context. Pass the result to {@link #end(IterationContext)}. */
+    public static IterationContext begin() {
+        IterationContext ctx = new IterationContext(ITERATION.incrementAndGet());
+        if (!runner.util.StatusReporter.isEnabled()) {
+            System.out.println("Beginning iteration");
+        }
+        // Keep baseline and end-of-iteration heap readings symmetric (see end());
+        // GC runs before the latency clock starts so it never counts against the iteration.
+        if (Boolean.getBoolean("closurejvm.heap.gcBeforeMeasure")) {
+            System.gc();
+        }
+        ctx.startNanos = System.nanoTime();
+        ctx.baselineHeapBytes = usedHeapBytes();
+        ctx.baselineThreadCount = snapshotTotalThreadCount();
+        ctx.monitoredThread = Thread.currentThread();
+        scheduleLatencySampleIfConfigured(ctx);
+        ctx.baselineNonDaemonThreadIds = snapshotNonDaemonThreadIds();
+        ctx.baselineActiveExecutorIdentities = snapshotActiveExecutorIdentities();
+        ctx.baselineActiveTimerIdentities = snapshotActiveTimerIdentities();
+        return ctx;
     }
 
-    /**
-     * End current iteration boundary
-     * This method should be called at the end of each iteration
-     */
-    public static void endIteration() {
-        // Small grace period: allow short-lived tasks to finish
+    /** End the iteration described by {@code ctx}, running metrics, invariants, and leak checks. */
+    public static void end(IterationContext ctx) {
+        // Latency is measured at entry, before the grace sleep below, so the
+        // grace period never counts against the iteration's latency invariant.
+        final long elapsedMs = Math.max(0L, (System.nanoTime() - ctx.startNanos) / 1_000_000L);
+
+        // Small grace period: allow short-lived tasks to finish before the leak snapshot
         try {
             Thread.sleep(25);
         } catch (InterruptedException e) {
@@ -81,19 +97,33 @@ public class Agent {
         }
 
         // Simple metrics snapshot and print-only signal
-        final long elapsedMs = Math.max(0L, (System.nanoTime() - iterationStartNanos) / 1_000_000L);
+        // Opt-in GC so heap delta reflects retention rather than allocation noise.
+        // Off by default: System.gc() is slow and distorts iteration throughput.
+        if (Boolean.getBoolean("closurejvm.heap.gcBeforeMeasure")) {
+            System.gc();
+        }
         final long heapNow = usedHeapBytes();
-        final long heapDeltaBytes = heapNow - baselineHeapUsedBytes;
+        final long heapDeltaBytes = heapNow - ctx.baselineHeapBytes;
         final int threadsNow = snapshotTotalThreadCount();
-        final int threadsDelta = threadsNow - baselineThreadCount;
-        System.out.println(String.format(
-                "[ClosureJVM] Iteration %d metrics: latency=%dms, heapDelta=%+d KB, threads=%d (%+d)",
-                iteration, elapsedMs, heapDeltaBytes / 1024, threadsNow, threadsDelta));
+        final int threadsDelta = threadsNow - ctx.baselineThreadCount;
+        ctx.latencyMs = elapsedMs;
+        ctx.heapDeltaBytes = heapDeltaBytes;
+        ctx.threadCount = threadsNow;
+        ctx.threadDelta = threadsDelta;
+        if (!runner.util.StatusReporter.isEnabled()) {
+            System.out.println(String.format(
+                    "[ClosureJVM] Iteration %d metrics: latency=%dms, heapDelta=%+d KB, threads=%d (%+d)",
+                    ctx.iterationNumber, elapsedMs, heapDeltaBytes / 1024, threadsNow, threadsDelta));
+        }
 
         // Configurable invariants (v0.2): thresholds checked here. Defaults disabled unless props set.
         try {
-            Invariants.evaluateAndMaybeFail(iteration, elapsedMs, heapDeltaBytes, threadsNow, threadsDelta);
+            Invariants.evaluateAndMaybeFail(ctx, elapsedMs, heapDeltaBytes, threadsNow, threadsDelta);
         } catch (IllegalStateException e) {
+            // Publish evidence before the throw propagates so servlet integrations can read it.
+            publishInvariantEvidence(ctx);
+            cancelLatencySample(ctx);
+            recordStatus(ctx);
             // If configured to fail-hard, rethrow to stop the iteration loop fast
             if (Boolean.getBoolean("closurejvm.forceExitOnLeak")) {
                 System.err.println("[ClosureJVM] Forcing process exit due to invariant violation (closurejvm.forceExitOnLeak=true)");
@@ -101,18 +131,19 @@ public class Agent {
             }
             throw e;
         }
-        cancelLatencySample();
+        publishInvariantEvidence(ctx);
+        cancelLatencySample(ctx);
 
         Map<Long, Thread> currentNonDaemon = snapshotNonDaemonThreads();
         Set<Long> currentIds = currentNonDaemon.keySet();
 
         // New non-daemon threads that were not present at iteration start
         Set<Long> newNonDaemon = new HashSet<>(currentIds);
-        newNonDaemon.removeAll(baselineNonDaemonThreadIds);
+        newNonDaemon.removeAll(ctx.baselineNonDaemonThreadIds);
 
         boolean leakDetected = false;
         if (!newNonDaemon.isEmpty()) {
-            System.err.println("[ClosureJVM] Thread leak detected after iteration " + iteration + ": " + newNonDaemon.size() + " new non-daemon thread(s) remain");
+            System.err.println("[ClosureJVM] Thread leak detected after iteration " + ctx.iterationNumber + ": " + newNonDaemon.size() + " new non-daemon thread(s) remain");
             for (Long id : newNonDaemon) {
                 Thread t = currentNonDaemon.get(id);
                 if (t == null) {
@@ -136,12 +167,12 @@ public class Agent {
         for (ExecutorService ex : liveTrackedExecutors()) {
             if (ex == null) continue;
             int id = System.identityHashCode(ex);
-            if (!baselineActiveExecutorIdentities.contains(id) && !ex.isShutdown()) {
+            if (!ctx.baselineActiveExecutorIdentities.contains(id) && !ex.isShutdown()) {
                 newActiveExecutors.add(ex);
             }
         }
         if (!newActiveExecutors.isEmpty()) {
-            System.err.println("[ClosureJVM] Executor leak detected after iteration " + iteration + ": " + newActiveExecutors.size() + " executor(s) not shutdown");
+            System.err.println("[ClosureJVM] Executor leak detected after iteration " + ctx.iterationNumber + ": " + newActiveExecutors.size() + " executor(s) not shutdown");
             for (ExecutorService ex : newActiveExecutors) {
                 String type = ex.getClass().getName();
                 String extra = "";
@@ -170,18 +201,20 @@ public class Agent {
             if (t == null) continue;
             int id = System.identityHashCode(t);
             // Timer has no isCancelled API; we can only infer via purge()/cancel usage. Best-effort: assume live if thread exists.
-            if (!baselineActiveTimerIdentities.contains(id)) {
+            if (!ctx.baselineActiveTimerIdentities.contains(id)) {
                 newActiveTimers.add(t);
             }
         }
         if (!newActiveTimers.isEmpty()) {
-            System.err.println("[ClosureJVM] Timer leak (best-effort) after iteration " + iteration + ": " + newActiveTimers.size() + " timer(s) may be active");
+            System.err.println("[ClosureJVM] Timer leak (best-effort) after iteration " + ctx.iterationNumber + ": " + newActiveTimers.size() + " timer(s) may be active");
             for (Timer t : newActiveTimers) {
-                System.err.println("  - Timer " + t.getClass().getName() + "@" + Integer.toHexString(System.identityHashCode(t)) + " (daemon=" + isTimerDaemon(t) + ")");
+                System.err.println("  - Timer " + t.getClass().getName() + "@" + Integer.toHexString(System.identityHashCode(t)) + " (daemon=" + timerDaemonStatus(t) + ")");
             }
             leakDetected = true;
         }
 
+        ctx.leakDetected = leakDetected;
+        recordStatus(ctx);
         if (leakDetected) {
             // Optional hard-exit for demos/CI so leaked non-daemon threads don't keep JVM alive
             if (Boolean.getBoolean("closurejvm.forceExitOnLeak")) {
@@ -189,10 +222,48 @@ public class Agent {
                 System.exit(2);
             }
             // Fail fast for v0.1 to make leaks obvious
-            throw new IllegalStateException("Leak(s) detected after iteration " + iteration);
+            throw new IllegalStateException("Leak(s) detected after iteration " + ctx.iterationNumber);
         }
 
-        System.out.println("Ending iteration");
+        if (!runner.util.StatusReporter.isEnabled()) {
+            System.out.println("Ending iteration");
+        }
+    }
+
+    private static void recordStatus(IterationContext ctx) {
+        runner.util.StatusReporter.recordIteration(
+                ctx.latencyMs, ctx.heapDeltaBytes / 1024L, ctx.threadCount, ctx.leakDetected, ctx.invariantViolations);
+    }
+
+    // --- Legacy API (thread-local-backed wrappers over the context API) ---
+
+    /**
+     * Begin a new iteration boundary on the current thread.
+     * Prefer {@link #begin()} in new code; this stores the context in a thread-local.
+     */
+    public static void beginIteration() {
+        CURRENT.set(begin());
+    }
+
+    /**
+     * End the current thread's iteration boundary.
+     * Prefer {@link #end(IterationContext)} in new code.
+     */
+    public static void endIteration() {
+        IterationContext ctx = CURRENT.get();
+        if (ctx == null) {
+            // Defensive: end without a matching begin. Synthesize a context so we still run the
+            // checks rather than NPE — but its metrics measure ~nothing, so warn loudly that
+            // this is a caller-ordering bug rather than reporting plausible all-zero numbers.
+            System.err.println("[ClosureJVM] endIteration() called without a matching beginIteration() "
+                    + "on this thread; this iteration's metrics are not meaningful (caller-ordering bug).");
+            ctx = begin();
+        }
+        try {
+            end(ctx);
+        } finally {
+            CURRENT.remove();
+        }
     }
 
     private static Set<Long> snapshotNonDaemonThreadIds() {
@@ -200,10 +271,20 @@ public class Agent {
     }
 
     private static Map<Long, Thread> snapshotNonDaemonThreads() {
-        // getAllStackTraces() gives us all live threads and avoids missing threads not in current ThreadGroup
-        Map<Thread, StackTraceElement[]> all = Thread.getAllStackTraces();
+        // Preferred source: the JVMTI native agent's event-maintained leak set — real Thread
+        // objects tracked from ThreadStart/ThreadEnd, so no enumeration happens at all.
+        // Fallback: enumerate via the root ThreadGroup, which returns Thread objects without
+        // walking any stacks (the previous Thread.getAllStackTraces() forced a safepoint stack
+        // walk of every thread per iteration only to discard the stacks). Either way, stacks
+        // are captured lazily below, only for threads that actually leaked.
         Map<Long, Thread> result = new HashMap<>();
-        for (Thread t : all.keySet()) {
+        // Native path returns null on an internal error (e.g. allocation failure); fall back to
+        // enumeration rather than treating it as "no leaked threads".
+        Thread[] threads = NativeThreadTracker.isActive() ? NativeThreadTracker.nonDaemonThreads() : null;
+        if (threads == null) {
+            threads = enumerateAllThreads();
+        }
+        for (Thread t : threads) {
             if (t != null && t.isAlive() && !t.isDaemon()) {
                 result.put(t.getId(), t);
             }
@@ -212,8 +293,38 @@ public class Agent {
     }
 
     private static int snapshotTotalThreadCount() {
-        // Total live threads (daemon + non-daemon), best-effort via all stack traces
-        return Thread.getAllStackTraces().keySet().size();
+        // Prefer the JVMTI native agent's event-maintained count when it is loaded: no JMX call,
+        // no stack walk. Falls back to the management bean's count otherwise. Both are used only
+        // via deltas across an iteration, so the small absolute offset between the two sources
+        // (JVMTI sees threads JMX does not) does not affect the thread-delta signal.
+        if (NativeThreadTracker.isActive()) {
+            return NativeThreadTracker.liveThreadCount();
+        }
+        return THREAD_MX.getThreadCount();
+    }
+
+    private static Thread[] enumerateAllThreads() {
+        ThreadGroup root = Thread.currentThread().getThreadGroup();
+        if (root == null) {
+            return new Thread[0];
+        }
+        for (ThreadGroup parent = root.getParent(); parent != null; parent = root.getParent()) {
+            root = parent;
+        }
+        // activeCount() is an estimate; oversize and retry until the array is not filled exactly,
+        // which guarantees we captured every thread rather than truncating.
+        int size = root.activeCount() + 16;
+        Thread[] threads;
+        int n;
+        while (true) {
+            threads = new Thread[size];
+            n = root.enumerate(threads, true);
+            if (n < size) {
+                break;
+            }
+            size *= 2;
+        }
+        return java.util.Arrays.copyOf(threads, n);
     }
 
     public static <T extends ExecutorService> T trackExecutor(T executor) {
@@ -250,15 +361,17 @@ public class Agent {
         return ids;
     }
 
-    private static boolean isTimerDaemon(Timer t) {
-        // Timer has a private thread; exposing daemon status would require reflection. Best-effort: infer from name scan.
-        for (Map.Entry<Thread, StackTraceElement[]> e : Thread.getAllStackTraces().entrySet()) {
-            Thread th = e.getKey();
-            if (th != null && th.isAlive() && th.getName() != null && th.getName().startsWith("Timer-")) {
-                return th.isDaemon();
-            }
+    private static String timerDaemonStatus(Timer t) {
+        // Timer's thread is private; reflection only works with --add-opens java.base/java.util.
+        // Report "unknown" rather than guessing from an unrelated Timer-* thread.
+        try {
+            java.lang.reflect.Field f = Timer.class.getDeclaredField("thread");
+            f.setAccessible(true);
+            Thread th = (Thread) f.get(t);
+            return th != null ? String.valueOf(th.isDaemon()) : "unknown";
+        } catch (Throwable ignored) {
+            return "unknown";
         }
-        return false;
     }
 
     private static long usedHeapBytes() {
@@ -266,40 +379,39 @@ public class Agent {
         return rt.totalMemory() - rt.freeMemory();
     }
 
-    static void setLastInvariantViolations(java.util.List<Invariants.Violation> violations) {
-        if (violations == null || violations.isEmpty()) {
-            lastInvariantViolations = java.util.Collections.emptyList();
-            return;
-        }
-        java.util.List<String> out = new java.util.ArrayList<>();
-        for (Invariants.Violation v : violations) {
-            out.add(v.name + ": " + v.detail);
-        }
-        lastInvariantViolations = out;
+    private static void publishInvariantEvidence(IterationContext ctx) {
+        lastInvariantViolations = ctx.invariantViolations;
+        lastInvariantStack = ctx.invariantStack;
     }
 
     public static java.util.List<String> getLastInvariantViolations() {
-        return new java.util.ArrayList<>(lastInvariantViolations);
-    }
-
-    static void setLastInvariantStack(String stack) {
-        lastInvariantStack = stack != null ? stack : "";
+        return new ArrayList<>(lastInvariantViolations);
     }
 
     public static String getLastInvariantStack() {
         return lastInvariantStack;
     }
 
-    static void recordInvariantEvidence(java.util.List<Invariants.Violation> violations) {
-        setLastInvariantViolations(violations);
-        setLastInvariantStack(buildStackSnapshot());
+    /** Called by {@link Invariants} during evaluation to record evidence onto the context. */
+    static void recordInvariantEvidence(IterationContext ctx, List<Invariants.Violation> violations) {
+        if (violations == null || violations.isEmpty()) {
+            ctx.invariantViolations = Collections.emptyList();
+        } else {
+            List<String> out = new ArrayList<>();
+            for (Invariants.Violation v : violations) {
+                out.add(v.name + ": " + v.detail);
+            }
+            ctx.invariantViolations = out;
+        }
+        ctx.invariantStack = buildStackSnapshot(ctx);
     }
 
-    private static String buildStackSnapshot() {
+    private static String buildStackSnapshot(IterationContext ctx) {
         String mode = System.getProperty("closurejvm.invariant.stack", "current");
         StringBuilder sb = new StringBuilder();
-        if (sampledExecStack != null && !sampledExecStack.isEmpty()) {
-            sb.append("executionThread(sampled)=\n").append(sampledExecStack);
+        String sampled = ctx.sampledExecStack;
+        if (sampled != null && !sampled.isEmpty()) {
+            sb.append("executionThread(sampled)=\n").append(sampled);
         }
         if ("off".equalsIgnoreCase(mode)) {
             return "";
@@ -331,15 +443,14 @@ public class Agent {
         return sb.toString();
     }
 
-    private static void scheduleLatencySampleIfConfigured() {
-        cancelLatencySample();
+    private static void scheduleLatencySampleIfConfigured(IterationContext ctx) {
         if (!Boolean.getBoolean("closurejvm.invariant.latency.sample")) return;
         Long latencyMax = null;
         try { latencyMax = Long.getLong("closurejvm.invariant.latency.maxMs"); } catch (Exception ignored) {}
         if (latencyMax == null || latencyMax <= 0) return;
-        final Thread threadToSample = monitoredThread;
+        final Thread threadToSample = ctx.monitoredThread;
         if (threadToSample == null) return;
-        samplingTask = new TimerTask() {
+        TimerTask task = new TimerTask() {
             @Override public void run() {
                 try {
                     StringBuilder sb = new StringBuilder();
@@ -350,21 +461,21 @@ public class Agent {
                     int limit = Math.min(Integer.getInteger("closurejvm.invariant.stack.maxFrames", 15), st.length);
                     for (int i = 0; i < limit; i++) sb.append("  at ").append(st[i]).append('\n');
                     if (st.length > limit) sb.append("  ...").append(st.length - limit).append(" more\n");
-                    sampledExecStack = sb.toString();
+                    ctx.sampledExecStack = sb.toString();
                 } catch (Throwable ignored) {}
             }
         };
+        ctx.samplingTask = task;
         try {
-            invariantSampler.schedule(samplingTask, Math.max(1L, latencyMax));
+            invariantSampler.schedule(task, Math.max(1L, latencyMax));
         } catch (IllegalStateException ignored) {}
     }
 
-    private static void cancelLatencySample() {
+    private static void cancelLatencySample(IterationContext ctx) {
         try {
-            if (samplingTask != null) samplingTask.cancel();
+            if (ctx.samplingTask != null) ctx.samplingTask.cancel();
         } catch (Throwable ignored) {}
-        samplingTask = null;
-        monitoredThread = null;
+        ctx.samplingTask = null;
     }
 
     private static Set<ExecutorService> liveTrackedExecutors() {
